// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message[Base] should render correctly  1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px;"
>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show
    </span>
  </button>
  <button
    class="soui-button soui-button-primary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <button
    class="soui-button soui-button-success soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="soui-button soui-button-warning soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Warn
    </span>
  </button>
  <button
    class="soui-button soui-button-danger soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Error
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Close All
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  2`] = `
<div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Duration 10 s.
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Manually close
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  3`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          middle
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-right
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-right
        </span>
      </div>
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show message.
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render default 1`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message[Base] should render default 2`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
